# violet

./: .gitignore  AUDIO_ISSUES_RESOLVED.md  IMPLEMENTATION_STATUS.md  LICENSE  MODERN_UI.md  MODERN_UI_USAGE.md  PROJECT_OUTLINE.md  README.md  SAMPLE_RATE_FIX.md  WASAPI_CALLBACK_FIX.md  build.sh  cross-mingw64.txt  meson.build  project.md  test_parameters.cpp  violet-installer.nsi  win32
docs/: QUICK_REFERENCE.md  USER_GUIDE.md  WINE_AUDIO_SETUP.md  active_plugins_panel.md  backtrace.txt  drag_and_drop.md  plugin_browser.md  plugin_parameters_window.md
include/violet/: about_dialog.h  active_plugins_panel.h  audio_buffer.h  audio_engine.h  audio_processing_chain.h  audio_settings_dialog.h  config_manager.h  dpi_scaling.h  knob_control.h  main_window.h  midi_handler.h  modern_controls.h  plugin_browser.h  plugin_manager.h  plugin_parameters_window.h  resource.h  session_manager.h  theme.h  theme_manager.h  utils.h
src/: main.cpp
src/audio/: audio_buffer.cpp  audio_engine.cpp  audio_processing_chain.cpp  midi_handler.cpp  plugin_manager.cpp
src/core/: config_manager.cpp  session_manager.cpp  theme_manager.cpp  utils.cpp
src/platform/: windows_api.cpp
src/ui/: about_dialog.cpp  active_plugins_panel.cpp  audio_settings_dialog.cpp  dpi_scaling.cpp  knob_control.cpp  main_window.cpp  modern_controls.cpp  plugin_browser.cpp  plugin_parameters_window.cpp  theme.cpp
